# SocPrj

./: CMakeLists.txt  Makefile  README.md  conanfile.py  vcpkg.json
cmake/: AddGitSubmodule.cmake  ConfigSafeGuards.cmake  Sanitizers.cmake  Tools.cmake
docs/: Doxyfile
src/: CMakeLists.txt  uart_peripheral.cpp  uart_peripheral.h  uart_reg.cpp  uart_reg.h
testbench/: CMakeLists.txt  tb_uart.cpp
